--- a/force-app/main/default/aura/GoogleAddressAutoComplete/GoogleAddressAutoComplete.cmp
+++ b/force-app/main/default/aura/GoogleAddressAutoComplete/GoogleAddressAutoComplete.cmp
@@ -10,6 +10,7 @@
      <aura:attribute name="myselePlaceID" type="String" default=""/> 
     <aura:attribute name="Selecteddataset" type="String" default=""/>
     <aura:attribute name="PropId" type="String" default=""/>
+    <aura:attribute name="showDropdown" type="Boolean" default="false"/>
     
     <aura:attribute name="streetNumber" type="String"/>
     <aura:attribute name="street" type="String"/>
@@ -44,8 +45,9 @@
                       placeholder="{!v.placeholder}"
                       aura:id="prptext3"
                       required="true"
+                      size="60"
                       />
-        <aura:if isTrue="{!empty(v.selectedOption)}">
+        <aura:if isTrue="{!(empty(v.selectedOption))}">
             <aura:set attribute="else">
                 <button class="slds-button slds-button_icon slds-input__icon slds-input__icon_right"
                         onclick="{!c.clear}">
@@ -53,29 +55,31 @@
                 </button>
             </aura:set>
         </aura:if>
-        <div id="listbox-unique-id" role="listbox">
-            <ul class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid"
-                role="presentation" style="max-width: 850px;margin-top: -19px; width: 509px;">
-                <aura:iteration items="{!v.filteredOptions}" var="option">
-                    <li role="presentation"
-                        class="slds-listbox__item"
-                        onclick="{!c.selectOption}"
-                        data-value="{!option.value}"
-                        data-record="{!option.label}"
-                        data-locaval="{!option.locaval}"
-                        data-addrdata="{!option.addressComponents}"
-                        data-placeid="{!option.PlaceId}">
-                        <span id="listbox-option-unique-id-01"
-                              class="slds-media slds-listbox__option slds-listbox__option_entity slds-listbox__option_has-meta"
-                              role="option">
-                            <span class="slds-media__body">
-                                <span class="slds-listbox__option-text slds-listbox__option-text_entity">{!option.label}</span>
+        <aura:renderIf isTrue="{!v.showDropdown}">
+            <div id="listbox-unique-id" role="listbox">
+                <ul class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid"
+                    role="presentation" style="max-width: 850px;margin-top: -19px; width: 509px;">
+                    <aura:iteration items="{!v.filteredOptions}" var="option">
+                        <li role="presentation"
+                            class="slds-listbox__item"
+                            onclick="{!c.selectOption}"
+                            data-value="{!option.value}"
+                            data-record="{!option.label}"
+                            data-locaval="{!option.locaval}"
+                            data-addrdata="{!option.addressComponents}"
+                            data-placeid="{!option.PlaceId}">
+                            <span id="listbox-option-unique-id-01"
+                                  class="slds-media slds-listbox__option slds-listbox__option_entity slds-listbox__option_has-meta"
+                                  role="option">
+                                <span class="slds-media__body">
+                                    <span class="slds-listbox__option-text slds-listbox__option-text_entity">{!option.label}</span>
+                                </span>
                             </span>
-                        </span>
-                    </li>
-                </aura:iteration>
-            </ul>
-        </div>
+                        </li>
+                    </aura:iteration>
+                </ul>
+            </div>
+    	</aura:renderIf>
     </div>
     <!-- Auto Suggestion End --> 
 </aura:component>
