with third party integration

--- a/force-app/main/default/layouts/Vehicle__c-Vehicle Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Vehicle__c-Vehicle Layout.layout-meta.xml
@@ -14,6 +14,14 @@
                 <behavior>Edit</behavior>
                 <field>VIN__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Model_Year__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Base_Price__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
