--- a/force-app/main/default/layouts/Quote__c-Quote Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Quote__c-Quote Layout.layout-meta.xml
@@ -85,6 +85,14 @@
         <style>CustomLinks</style>
     </layoutSections>
     <relatedLists>
+        <fields>NAME</fields>
+        <relatedList>Contact_Quote_Junction__c.Quote__c</relatedList>
+    </relatedLists>
+    <relatedLists>
+        <fields>NAME</fields>
+        <relatedList>Vehicle__c.Quote__c</relatedList>
+    </relatedLists>
+    <relatedLists>
         <fields>TASK.SUBJECT</fields>
         <fields>TASK.WHO_NAME</fields>
         <fields>ACTIVITY.TASK</fields>
