--- a/force-app/main/default/aura/quote_select/quote_select.cmp
+++ b/force-app/main/default/aura/quote_select/quote_select.cmp
@@ -4,13 +4,10 @@
     <div class="card_wrapper">
         <lightning:layout verticalAlign="center" horizontalAlign="center" pullToBoundary="small">
             <lightning:layoutItem flexibility="auto" padding="around-small">
-                <img aura:id="homeauto_start" src="{!$Resource.homeauto_button}" onmouseover="{!c.onMouseOver}" onmouseout="{!c.onMouseOut}" onclick="{!c.onSelect}" data-value="homeauto_start"/>
+                <img aura:id="annuity_start" src="{!$Resource.home_button}" onmouseover="{!c.onMouseOver}" onmouseout="{!c.onMouseOut}" onclick="{!c.onSelect}" data-value="annuity_start"/>
             </lightning:layoutItem>
             <lightning:layoutItem flexibility="auto" padding="around-small">
-                <img aura:id="home_start" src="{!$Resource.home_button}" onmouseover="{!c.onMouseOver}" onmouseout="{!c.onMouseOut}" onclick="{!c.onSelect}" data-value="home_start"/>
-            </lightning:layoutItem>
-            <lightning:layoutItem flexibility="auto" padding="around-small">
-                <img aura:id="auto_start" src="{!$Resource.auto_button}" onmouseover="{!c.onMouseOver}" onmouseout="{!c.onMouseOut}" onclick="{!c.onSelect}" data-value="auto_start"/>
+                <img aura:id="life_start" src="{!$Resource.auto_button}" onmouseover="{!c.onMouseOver}" onmouseout="{!c.onMouseOut}" onclick="{!c.onSelect}" data-value="life_start"/>
             </lightning:layoutItem>
         </lightning:layout>
     </div>
